--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello World!
+<html leng="en">
+    <header>
+    </header>
+    <body>
+        <h1>
+            Hello!
+        </h1>
+    </body>
+</html>
