--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html leng="en">
     <header>
+        <link type="text/css" rel="stylesheet" href="index.css">
     </header>
     <body>
         <h1>
