--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <html leng="en">
     <header>
         <link type="text/css" rel="stylesheet" href="index.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     </header>
     <body>
-        <h1>
+        <h1 class="neon-red-header">
             Hello!
         </h1>
     </body>
