--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <html leng="en">
-    <header>
-        <link type="text/css" rel="stylesheet" href="index.css">
+    <head>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    </header>
+        <link type="text/css" rel="stylesheet" href="index.css">
+    </head>
     <body>
         <h1 class="neon-red-header">
-            Hello!
+            <center>
+                LOGAN PAGELER!
+            </center>
         </h1>
     </body>
 </html>
