--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body>
         <h1 class="neon-red-header">
             <center>
+                <img src="assets/images/balloon.svg">
                 LOGAN PAGELER!
             </center>
         </h1>
