--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
     <head>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Neonderthaw&family=Roboto&display=swap" rel="stylesheet">
         <link type="text/css" rel="stylesheet" href="index.css">
     </head>
     <body>
-        <h1 class="neon-red-header">
-            <center>
-                <img src="assets/images/balloon.svg">
+        <center>
+            <img src="assets/images/balloon.svg">
+            <br>
+            <h1 class="neon-red-header">
                 LOGAN PAGELER!
-            </center>
-        </h1>
+            </h1>
+        </center> 
     </body>
 </html>
