--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <link type="text/css" rel="stylesheet" href="index.css">
     </head>
     <body>
+        <div class="navbar">
+
+        </div>
         <center>
             <img src="assets/images/balloon.svg">
             <br>
