--- a/index.html
+++ b/index.html
@@ -7,10 +7,21 @@
     </head>
     <body>
         <div class="navbar">
-
+            <div style="float: left;">
+                <h1>Logan Pageler</h1>
+                <h2>Github</h2>
+            </div>
+            <div style="float: right">
+                <ul>
+                    <li>Home</li>
+                    <li>About</li>
+                    <li>Projects</li>
+                    <li>Contact</li>
+                </ul>
+            </div>
         </div>
         <center>
-            <img src="assets/images/balloon.svg">
+            <img src="assets/images/balloon.svg" style="width:20%">
             <br>
             <h1 class="neon-red-header">
                 LOGAN PAGELER!
