--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
                 </ul>
             </div>
         </div>
-        <center>
-            <img src="assets/images/balloon.svg" style="width:20%">
-            <br>
-            <h1 class="neon-red-header">
-                LOGAN PAGELER!
-            </h1>
-        </center> 
+        <div class="main">
+            <center>
+                <img src="assets/images/balloon.svg" style="width:20%">
+                <br>
+                <h1 class="neon-red-header">
+                    LOGAN PAGELER!
+                </h1>
+            </center> 
+        </div>
     </body>
 </html>
