--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
             </div>
             <div style="float: right">
                 <ul>
-                    <li>Home</li>
+                    <li href="#main">Home</li>
                     <li>About</li>
                     <li>Projects</li>
                     <li>Contact</li>
                 </ul>
             </div>
         </div>
-        <div class="main">
+        <div id="main">
             <center>
                 <img src="assets/images/balloon.svg" style="width:20%">
                 <br>
