--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link type="text/css" rel="stylesheet" href="index.css">
     </head>
     <body>
-        <div class="navbar">
+        <div id="navbar" class="navbar-scroll">
             <div style="float: left;">
                 <h1>Logan Pageler</h1>
                 <h2>Github</h2>
