--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Neonderthaw&family=Roboto&display=swap" rel="stylesheet">
         <link type="text/css" rel="stylesheet" href="index.css">
+        <script scr="javascript/navbar.js"></script>
     </head>
     <body>
         <div id="navbar" class="navbar-scroll">
