setting up about

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div style="float: right">
                 <ul>
                     <li href="#main">Home</li>
-                    <li>About</li>
+                    <li href="#about">About</li>
                     <li>Projects</li>
                     <li>Contact</li>
                 </ul>
@@ -36,6 +36,9 @@
                     LOGAN PAGELER!
                 </h1>
             </center> 
+        </div>
+        <div id="about">
+            <h1 style="font-size: 80px;">ABOUT ME</h1>
         </div>
     </body>
 </html>
