--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
         <script scr="javascript/navbar.js"></script>
     </head>
     <body>
+        <div id="main">
+            <center>
+                <img src="assets/images/balloon.svg" style="width:20%">
+                <br>
+                <h1 class="neon-red-header">
+                    LOGAN PAGELER
+                </h1>
+            </center> 
+        </div>
         <div id="navbar" class="navbar-scroll">
             <div style="float: left;">
                 <h1>Logan Pageler</h1>
@@ -27,15 +36,6 @@
                     <li>Contact</li>
                 </ul>
             </div>
-        </div>
-        <div id="main">
-            <center>
-                <img src="assets/images/balloon.svg" style="width:20%">
-                <br>
-                <h1 class="neon-red-header">
-                    LOGAN PAGELER!
-                </h1>
-            </center> 
         </div>
         <div id="about">
             <h1 style="font-size: 80px;">ABOUT ME</h1>
