--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
             </div>
         </div>
         <div id="about">
+            <div>
             <h1 style="font-size: 80px;">ABOUT ME</h1>
+            </div>
+            <div class="vl"></div>
         </div>
     </body>
 </html>
