--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <meta name="msapplication-TileColor" content="#da532c">
         <meta name="theme-color" content="#ffffff">
         <link type="text/css" rel="stylesheet" href="index.css">
-        <script src="javascript/navbar.js"></script>
+        <script src="javascript/navbar.js" defer></script>
     </head>
     <body>
         <div id="main">
