--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <html leng="en">
-    <head>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Neonderthaw&family=Roboto&display=swap" rel="stylesheet">
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon/favicon-16x16.png">
-        <link rel="manifest" href="assets/images/favicon/site.webmanifest">
-        <link rel="mask-icon" href="assets/images/favicon/safari-pinned-tab.svg" color="#5bbad5">
-        <meta name="msapplication-TileColor" content="#da532c">
-        <meta name="theme-color" content="#ffffff">
-        <link type="text/css" rel="stylesheet" href="index.css">
-        <script src="javascript/navbar.js" defer></script>
-    </head>
-    <body>
+
+<head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Neonderthaw&family=Roboto&display=swap" rel="stylesheet">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="assets/images/favicon/site.webmanifest">
+    <link rel="mask-icon" href="assets/images/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+    <link type="text/css" rel="stylesheet" href="index.css">
+    <script src="javascript/navbar.js" defer></script>
+</head>
+
+<body>
+    <div class="content">
         <div id="main">
             <center>
                 <img src="assets/images/balloon.svg" style="width:20%">
@@ -21,28 +24,83 @@
                 <h1 class="neon-red-header">
                     LOGAN PAGELER
                 </h1>
-            </center> 
+            </center>
         </div>
-        <div id="navbar" class="navbar-scroll">
-            <div style="float: left;">
-                <h1>Logan Pageler</h1>
-                <h2>Github</h2>
-            </div>
-            <div style="float: right">
-                <ul>
-                    <li href="#main">Home</li>
-                    <li href="#about">About</li>
-                    <li>Projects</li>
-                    <li>Contact</li>
-                </ul>
-            </div>
+    </div>
+    <div id="navbar" class="navbar-scroll">
+        <div style="float: left;">
+            <h1>Logan Pageler</h1>
+            <h2>Github</h2>
         </div>
-        <br>
+        <div style="float: right">
+            <ul>
+                <li href="#main">Home</li>
+                <li href="#about">About</li>
+                <li>Projects</li>
+                <li>Contact</li>
+            </ul>
+        </div>
+    </div>
+    <br>
+    <div class="content">
         <div id="about">
             <div>
-                <h1 style="font-size: 80px;">ABOUT ME</h1>
+                <h1 style="font-size: 80px; font-family: metallic; margin-left:5%;">ABOUT ME:</h1>
             </div>
-            <div class="vl"></div>
+            <br />
+            <div style="display:grid; grid-template-columns: 0.5fr 0.1fr 0.4fr; padding-left:10%">
+                <div style="font-size: 25px;">
+                    <p>
+                        My name is Logan Pageler, and I am Junior at the University of Arizona. Currently I am on track
+                        to
+                        graduation with a Bachelor's of Science in Computer Science and a Bachelors of Math with a
+                        Computer
+                        Science emphasis in the spring of 2024. I am planning to graduate with a Masters in Computer
+                        Science
+                        in the spring of 2025 through the University of Arizona's accelerated masters program. I am
+                        mainly
+                        intrested in recently developed technologies including A.I. and quantum computing.
+                    </p>
+                    <br />
+                    <p>
+                        I enjoy spending time outside too. Some of my main hobbies include running, rock climbing, and
+                        camping. I also am a big fan of board games. Recently I have been trying to increase my number
+                        of
+                        catan extension packs.
+                    </p>
+                </div>
+                <div>
+
+                    <div class="vl"></div>
+
+                </div>
+                <div class='wrapper'>
+                    <div class='carousel'>
+                        <div class='carousel__item'>
+                            <div class='carousel__item-body'
+                                style="background-image: url(assets/images/italy.jpg); background-size: cover;">
+                            </div>
+                        </div>
+                        <div class='carousel__item'>
+                            <div class='carousel__item-body'
+                                style=" background-image: url(assets/images/formal.jpg); background-size: cover;">
+                            </div>
+                        </div>
+                        <div class='carousel__item'>
+                            <div class='carousel__item-body'
+                                style="background-image: url(assets/images/triathlon.jpg); background-size: cover;">
+                            </div>
+                        </div>
+                        <div class='carousel__item'>
+                            <div class='carousel__item-body'
+                                style=" background-image: url(assets/images/friends.jpg); background-size: cover;">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-    </body>
+    </div>
+</body>
+
 </html>
