--- a/index.html
+++ b/index.html
@@ -1,178 +1,139 @@
 <html leng="en">
-	<head>
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap"
-			rel="stylesheet"
-		/>
-		<link
-			href="https://fonts.googleapis.com/css2?family=Neonderthaw&family=Roboto&display=swap"
-			rel="stylesheet"
-		/>
-		<link
-			rel="apple-touch-icon"
-			sizes="180x180"
-			href="assets/images/favicon/apple-touch-icon.png"
-		/>
-		<link
-			rel="icon"
-			type="image/png"
-			sizes="32x32"
-			href="assets/images/favicon/favicon-32x32.png"
-		/>
-		<link
-			rel="icon"
-			type="image/png"
-			sizes="16x16"
-			href="assets/images/favicon/favicon-16x16.png"
-		/>
-		<link rel="manifest" href="assets/images/favicon/site.webmanifest" />
-		<link
-			rel="mask-icon"
-			href="assets/images/favicon/safari-pinned-tab.svg"
-			color="#5bbad5"
-		/>
-		<meta name="msapplication-TileColor" content="#da532c" />
-		<meta name="theme-color" content="#ffffff" />
-		<link type="text/css" rel="stylesheet" href="index.css" />
-		<script src="javascript/navbar.js" defer></script>
-	</head>
 
-	<body>
-		<div class="content">
-			<div id="main">
-				<center>
-					<img src="assets/images/balloon.svg" style="width: 20%" />
-					<br />
-					<h1 class="neon-red-header">LOGAN PAGELER</h1>
-				</center>
-			</div>
+<head>
+	<link rel="preconnect" href="https://fonts.googleapis.com" />
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+	<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet" />
+	<link href="https://fonts.googleapis.com/css2?family=Neonderthaw&family=Roboto&display=swap" rel="stylesheet" />
+	<link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon/apple-touch-icon.png" />
+	<link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon/favicon-32x32.png" />
+	<link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon/favicon-16x16.png" />
+	<link rel="manifest" href="assets/images/favicon/site.webmanifest" />
+	<link rel="mask-icon" href="assets/images/favicon/safari-pinned-tab.svg" color="#5bbad5" />
+	<meta name="msapplication-TileColor" content="#da532c" />
+	<meta name="theme-color" content="#ffffff" />
+	<link type="text/css" rel="stylesheet" href="index.css" />
+	<script src="javascript/navbar.js" defer></script>
+</head>
+
+<body>
+
+	<div class="content" id="main">
+		<center>
+			<img src="assets/images/balloon.svg" style="width: 20%" />
+			<br />
+			<h1 class="neon-red-header">LOGAN PAGELER</h1>
+		</center>
+	</div>
+
+	<div id="navbar" style="transition-property: none" class="navbar-scroll">
+		<div style="float: left; color: #b9a44c">
+			<h1>Logan Pageler</h1>
 		</div>
-		<div
-			id="navbar"
-			style="transition-property: none"
-			class="navbar-scroll"
-		>
-			<div style="float: left; color: #b9a44c">
-				<h1>Logan Pageler</h1>
-			</div>
-			<div style="float: right">
-				<ul>
-					<li href="#main">Home</li>
-					<li href="#about">About</li>
-					<li>Projects</li>
-					<li>Contact</li>
-				</ul>
-			</div>
+		<div style="float: right">
+			<ul>
+				<li href="#main">Home</li>
+				<li href="#about">About</li>
+				<li>Projects</li>
+				<li>Contact</li>
+			</ul>
 		</div>
-		<br />
-		<div class="content">
-			<div id="about">
-				<div
-					style="
+	</div>
+	<br />
+	<div class="content" id="about">
+		<div style="
 						display: grid;
 						grid-template-columns: 0.6fr 0.4fr;
 						padding-left: 10%;
-					"
-				>
-					<div>
-						<h1
-							style="
+					">
+			<div>
+				<h1 style="
 								font-size: 80px;
 								font-family: metallic;
 								margin-left: 5%;
 								color: #96dcd0;
-							"
-						>
-							ABOUT ME:
-						</h1>
-						<br />
-						<div
-							style="
+							">
+					ABOUT ME:
+				</h1>
+				<br />
+				<div style="
 								display: grid;
 								grid-template-columns: 0.9fr 0.1fr;
 								padding-left: 10%;
-							"
-						>
-							<div
-								style="
+							">
+					<div style="
 									font-size: 25px;
 									color: #a6ece0;
 									font-family: 'Roboto Mono', monospace;
-								"
-							>
-								<p>
-									My name is Logan Pageler, and I am Junior at
-									the University of Arizona. Currently I am on
-									track to graduation with a Bachelor's of
-									Science in Computer Science and a Bachelors
-									of Math with a Computer Science emphasis in
-									the spring of 2024. I am planning to
-									graduate with a Masters in Computer Science
-									in the spring of 2025 through the University
-									of Arizona's accelerated masters program. I
-									am mainly interested in recently developed
-									technologies including A.I. and quantum
-									computing.
-								</p>
-								<br />
-								<p>
-									I enjoy spending time outside too. Some of
-									my main hobbies include running, rock
-									climbing, and camping. I also am a big fan
-									of board games. Recently I have been trying
-									to increase my number of Catan extension
-									packs.
-								</p>
-							</div>
-							<div>
-								<div class="vl"></div>
-							</div>
-						</div>
+								">
+						<p>
+							My name is Logan Pageler, and I am Junior at
+							the University of Arizona. Currently I am on
+							track to graduation with a Bachelor's of
+							Science in Computer Science and a Bachelors
+							of Math with a Computer Science emphasis in
+							the spring of 2024. I am planning to
+							graduate with a Masters in Computer Science
+							in the spring of 2025 through the University
+							of Arizona's accelerated masters program. I
+							am mainly interested in recently developed
+							technologies including A.I. and quantum
+							computing.
+						</p>
+						<br />
+						<p>
+							I enjoy spending time outside too. Some of
+							my main hobbies include running, rock
+							climbing, and camping. I also am a big fan
+							of board games. Recently I have been trying
+							to increase my number of Catan extension
+							packs.
+						</p>
 					</div>
-					<div class="wrapper">
-						<div class="carousel">
-							<div class="carousel__item">
-								<div
-									class="carousel__item-body"
-									style="
+					<div>
+						<div class="vl"></div>
+					</div>
+				</div>
+			</div>
+			<div class="wrapper">
+				<div class="carousel">
+					<div class="carousel__item">
+						<div class="carousel__item-body" style="
 										background-image: url(assets/images/italy.jpg);
 										background-size: cover;
-									"
-								></div>
-							</div>
-							<div class="carousel__item">
-								<div
-									class="carousel__item-body"
-									style="
+									"></div>
+					</div>
+					<div class="carousel__item">
+						<div class="carousel__item-body" style="
 										background-image: url(assets/images/formal.jpg);
 										background-size: cover;
-									"
-								></div>
-							</div>
-							<div class="carousel__item">
-								<div
-									class="carousel__item-body"
-									style="
+									"></div>
+					</div>
+					<div class="carousel__item">
+						<div class="carousel__item-body" style="
 										background-image: url(assets/images/triathlon.jpg);
 										background-size: cover;
-									"
-								></div>
-							</div>
-							<div class="carousel__item">
-								<div
-									class="carousel__item-body"
-									style="
+									"></div>
+					</div>
+					<div class="carousel__item">
+						<div class="carousel__item-body" style="
 										background-image: url(assets/images/friends.jpg);
 										background-size: cover;
-									"
-								></div>
-							</div>
-						</div>
+									"></div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</body>
+	</div>
+
+	<div id="projects">
+		<div class="content">
+			<div>
+				<h1 style="font-size: 80px; font-family: metallic; margin-left:5%;">PROJECTS:</h1>
+			</div>
+		</div>
+	</div>
+
+</body>
+
 </html>
