--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 		<script src="javascript/navbar.js" defer></script>
 		<script src="javascript/projects.js" defer></script>
 		<script src="javascript/routes.js" defer></script>
+		<script src="javascript/contact.js" defer></script>
 	</head>
 
 	<body onload="updateRoute()">
@@ -66,12 +67,22 @@
 					<li onclick="goToPage('home');">Home</li>
 					<li onclick="goToPage('about');">About</li>
 					<li onclick="goToPage('projects');">Projects</li>
-					<li>Contact</li>
+					<li onclick="goToPage('contact');">Contact</li>
 				</ul>
 			</div>
 		</div>
 		<br />
 		<div id="about" class="content">
+			<h1
+				style="
+					font-size: 80px;
+					font-family: metallic;
+					margin-left: 5%;
+					color: #96dcd0;
+				"
+			>
+				ABOUT ME:
+			</h1>
 			<div
 				style="
 					display: grid;
@@ -80,16 +91,6 @@
 				"
 			>
 				<div>
-					<h1
-						style="
-							font-size: 80px;
-							font-family: metallic;
-							margin-left: 5%;
-							color: #96dcd0;
-						"
-					>
-						ABOUT ME:
-					</h1>
 					<br />
 					<div
 						style="
@@ -100,15 +101,15 @@
 					>
 						<div
 							style="
-								font-size: 25px;
+								font-size: 20px;
 								color: #a6ece0;
 								font-family: 'Roboto Mono', monospace;
 							"
 						>
 							<p>
-								My name is Logan Pageler, and I a am Junior at
+								My name is Logan Pageler, and I am a Junior at
 								the University of Arizona. Currently I am on
-								track to graduation with a Bachelor's of Science
+								track to graduate with a Bachelor's of Science
 								in Computer Science and a Bachelors of Math with
 								a Computer Science emphasis in the spring of
 								2024. I am planning to graduate with a Masters
@@ -133,43 +134,81 @@
 						</div>
 					</div>
 				</div>
-				<div class="wrapper">
-					<div class="carousel">
-						<div class="carousel__item">
-							<div
-								class="carousel__item-body"
-								style="
-									background-image: url(assets/images/italy.jpg);
-									background-size: cover;
-								"
-							></div>
-						</div>
-						<div class="carousel__item">
-							<div
-								class="carousel__item-body"
-								style="
-									background-image: url(assets/images/formal.jpg);
-									background-size: cover;
-								"
-							></div>
-						</div>
-						<div class="carousel__item">
-							<div
-								class="carousel__item-body"
-								style="
-									background-image: url(assets/images/triathlon.jpg);
-									background-size: cover;
-								"
-							></div>
-						</div>
-						<div class="carousel__item">
-							<div
-								class="carousel__item-body"
-								style="
-									background-image: url(assets/images/friends.jpg);
-									background-size: cover;
-								"
-							></div>
+				<div style="margin-left: 10%; margin-right: 10%">
+					<div class="wrapper">
+						<div class="carousel">
+							<div class="carousel__item">
+								<div
+									class="carousel__item-body"
+									style="
+										background-image: url(assets/images/italy.jpg);
+										background-size: cover;
+									"
+								></div>
+							</div>
+							<div class="carousel__item">
+								<div
+									class="carousel__item-body"
+									style="
+										background-image: url(assets/images/formal.jpg);
+										background-size: cover;
+									"
+								></div>
+							</div>
+							<div class="carousel__item">
+								<div
+									class="carousel__item-body"
+									style="
+										background-image: url(assets/images/triathlon.jpg);
+										background-size: cover;
+									"
+								></div>
+							</div>
+							<div class="carousel__item">
+								<div
+									class="carousel__item-body"
+									style="
+										background-image: url(assets/images/meditation.jpg);
+										background-size: cover;
+									"
+								></div>
+							</div>
+							<div class="carousel__item">
+								<div
+									class="carousel__item-body"
+									style="
+										background-image: url(assets/images/friends.jpg);
+										background-size: cover;
+									"
+								></div>
+							</div>
+							<div class="carousel__item">
+								<div
+									class="carousel__item-body"
+									style="
+										background-image: url(assets/images/mountain.jpg);
+										background-size: cover;
+									"
+								></div>
+							</div>
+							<div class="carousel__item">
+								<div
+									class="carousel__item-body"
+									style="
+										background-image: url(assets/images/airplane.jpg);
+										background-size: cover;
+									"
+								></div>
+							</div>
+							<div class="carousel__item">
+								<div
+									class="carousel__item-body"
+									style="
+										background-image: url(assets/images/green-italy.jpg);
+										background-size: cover;
+									"
+								></div>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -307,6 +346,99 @@
 					</p>
 				</div>
 			</div>
+			<div id="Web Design">
+				<div
+					style="margin-top: 40vh; margin-left: 10vw; width: 60vw"
+					class="project-content"
+				>
+					<h1
+						style="
+							font-size: 40px;
+							font-family: metallic;
+							margin-left: 5%;
+							width: 90%;
+							color: #96dcd0;
+							text-align: center;
+						"
+					>
+						WEB DESIGN
+					</h1>
+					<p
+						style="
+							font-size: 18px;
+							color: #c68c0f;
+							font-family: 'Roboto Mono', monospace;
+							margin: 2%;
+						"
+					>
+						&emsp; I took my first web design class in 6th grade.
+						Since then, I have been working on websites of many
+						different sizes. The three frameworks I am most
+						confident in are Angular, React, and Vue. I have worked
+						on both Angular and React websites professionally. I
+						also have a lot of experience writing in raw HTML and JS
+						such as this website. I am also a fan of HTTPS protocol,
+						as I have created a website entirely through sockets in
+						Java.
+					</p>
+				</div>
+				<div style="margin-top: 10vh; display: flex">
+					<div
+						style="margin-left: 5vw; width: 50vw; margin-top: 10vh"
+						class="project-content"
+					>
+						<br />
+						<p
+							style="
+								font-size: 18px;
+								color: #c68c0f;
+								font-family: 'Roboto Mono', monospace;
+								margin: 2%;
+							"
+						>
+							&emsp; One of my most recent websites was a Excel
+							file editor. I designed it with three major parts.
+							It has a Vue frontend, with a python backend, and
+							AWS for a database. It is also complete with Google
+							authentication to create sessions. I had a lot of
+							fun designing it, especially learning the
+							integration of the three parts. The code is
+							available on my Git Hub, but it is incomplete for
+							security reasons. That is, my specific AWS token and
+							Google token are not present on Git Hub.
+						</p>
+						<a
+							href="https://github.com/Logan-Pageler/mini-trip-page"
+							target="_blank"
+							style="
+								display: block;
+								margin-left: auto;
+								margin-right: auto;
+								background-color: rgb(22 163 74);
+								border-radius: 0.25rem;
+								color: rgb(255 255 255);
+								width: fit-content;
+								padding: 0.5rem 1.25rem;
+								font-family: 'VT323', monospace;
+								font-size: 30px;
+								text-decoration: none;
+							"
+						>
+							Mini Trip Page
+						</a>
+						<br />
+					</div>
+					<div
+						style="margin-left: 5vw; width: 25vw; height: 25vw"
+						class="project-content"
+					>
+						<img
+							src="assets/images/Mini-Trip.gif"
+							style="width: 100%"
+						/>
+					</div>
+				</div>
+			</div>
 			<div id="shapemon">
 				<div
 					style="margin-top: 40vh; margin-left: 30vw; width: 60vw"
@@ -350,67 +482,161 @@
 						<br />
 					</p>
 				</div>
-			</div>
-			<div style="margin-top: 10vh; display: flex">
-				<div
-					style="margin-left: 5vw; width: 35vw; height: fit-content"
-					class="project-content"
-				>
-					<img src="assets/images/Shapemon.png" style="width: 100%" />
-				</div>
-				<div
-					style="margin-left: 5vw; width: 50vw; margin-top: 20vw"
-					class="project-content"
-				>
-					<p
+
+				<div style="margin-top: 10vh; display: flex">
+					<div
 						style="
-							font-size: 18px;
-							color: #c68c0f;
-							font-family: 'Roboto Mono', monospace;
-							margin: 2%;
+							margin-left: 5vw;
+							width: 35vw;
+							height: fit-content;
 						"
+						class="project-content"
 					>
-						&emsp; While Shapemon may not be a good representation
-						of my current programming capabilities, it is definitely
-						an amazing representation of my passion for coding. With
-						very limited tools under my belt, I spent multitudes of
-						hours to finish the project in under just one month. I
-						easily coded away most of my spring break that year. I
-						spent on average 4 hours programming every day for that
-						month, on top of my other school work. I easily stayed
-						up past midnight most nights to work on it. Ultimately
-						the project is one I'm quite proud of, (even though it
-						pains me to know that I stuffed 12k lines into 1 file)
-						and I hope to work on many more large scale projects in
-						the future.
+						<img
+							src="assets/images/Shapemon.png"
+							style="width: 100%"
+						/>
+					</div>
+					<div
+						style="margin-left: 5vw; width: 50vw; margin-top: 20vw"
+						class="project-content"
+					>
+						<p
+							style="
+								font-size: 18px;
+								color: #c68c0f;
+								font-family: 'Roboto Mono', monospace;
+								margin: 2%;
+							"
+						>
+							&emsp; While Shapemon may not be a good
+							representation of my current programming
+							capabilities, it is definitely an amazing
+							representation of my passion for coding. With very
+							limited tools under my belt, I spent multitudes of
+							hours to finish the project in under just one month.
+							I easily coded away most of my spring break that
+							year. I spent on average 4 hours programming every
+							day for that month, on top of my other school work.
+							I easily stayed up past midnight most nights to work
+							on it. Ultimately the project is one I'm quite proud
+							of, (even though it pains me to know that I stuffed
+							12k lines into 1 file) and I hope to work on many
+							more large scale projects in the future.
+							<br />
+							<br />
+							&emsp; Shapemon is available for view and download
+							on my Git Hub under the repository shapemon.
+							Alternatively click bellow to view it.
+						</p>
+						<a
+							href="https://github.com/Logan-Pageler/shapemon"
+							target="_blank"
+							style="
+								display: block;
+								margin-left: auto;
+								margin-right: auto;
+								background-color: rgb(22 163 74);
+								border-radius: 0.25rem;
+								color: rgb(255 255 255);
+								width: fit-content;
+								padding: 0.5rem 1.25rem;
+								font-family: 'VT323', monospace;
+								font-size: 30px;
+								text-decoration: none;
+							"
+						>
+							SHAPEMON
+						</a>
 						<br />
-						<br />
-						&emsp; Shapemon is available for view and download on my
-						Git Hub under the repository shapemon. Alternatively
-						click bellow to view it.
-					</p>
+					</div>
+				</div>
+			</div>
+			<div style="height: 50vh"></div>
+		</div>
+		<div id="contact">
+			<h1
+				style="
+					font-size: 80px;
+					font-family: metallic;
+					margin-left: 5%;
+					color: #96dcd0;
+				"
+			>
+				CONTACT:
+			</h1>
+			<div style="display: grid; grid-template-columns: 0.5fr 0.5fr">
+				<div>
 					<a
-						href="https://github.com/Logan-Pageler/shapemon"
+						href="https://www.linkedin.com/in/logan-pageler-455525222/"
 						target="_blank"
-						style="
-							display: block;
-							margin-left: auto;
-							margin-right: auto;
-							background-color: rgb(22 163 74);
-							border-radius: 0.25rem;
-							color: rgb(255 255 255);
-							width: fit-content;
-							padding: 0.5rem 1.25rem;
-							font-family: 'VT323', monospace;
-							font-size: 30px;
-							text-decoration: none;
-						"
+						style="background-color: #0077b5"
+						class="contact-link"
 					>
-						SHAPEMON
+						<svg
+							xmlns="http://www.w3.org/2000/svg"
+							width="16"
+							height="16"
+							fill="currentColor"
+							class="bi bi-linkedin"
+							viewBox="0 0 16 16"
+						>
+							<path
+								d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"
+							></path>
+						</svg>
+						Linked In
 					</a>
-					<br />
+				</div>
+				<div>
+					<a
+						href="https://github.com/Logan-Pageler"
+						target="_blank"
+						style="background-color: #000000"
+						class="contact-link"
+					>
+						<svg
+							xmlns="http://www.w3.org/2000/svg"
+							width="16"
+							height="16"
+							fill="currentColor"
+							class="bi bi-github"
+							viewBox="0 0 16 16"
+						>
+							<path
+								d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"
+							></path>
+						</svg>
+						Git Hub
+					</a>
 				</div>
 			</div>
+			<br />
+			<div style="padding-left: 15%; padding-right: 15%">
+				<span title="Click to Copy">
+					<button
+						onclick="copyEmail();"
+						style="background-color: #bb001b"
+						class="contact-link"
+						title="Click to Copy"
+					>
+						<svg
+							xmlns="http://www.w3.org/2000/svg"
+							width="16"
+							height="16"
+							fill="currentColor"
+							class="bi bi-envelope"
+							viewBox="0 0 16 16"
+						>
+							<path
+								d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"
+							></path>
+						</svg>
+						pagelerlogan@gmail.com
+					</button>
+				</span>
+			</div>
+			<div style="height: 50vh"></div>
 		</div>
 	</body>
 </html>
