--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 			</div>
 		</div>
 
-		<div id="projects" class="sky">
+		<div id="projects" class="sky" style="overflow-x: hidden">
 			<div style="padding-top: 75vh"></div>
 			<img
 				id="project-header"
