--- a/index.html
+++ b/index.html
@@ -108,25 +108,31 @@
 						>
 							<p>
 								My name is Logan Pageler, and I am a Junior at
-								the University of Arizona. Currently I am on
-								track to graduate with a Bachelor's of Science
-								in Computer Science and a Bachelors of Math with
-								a Computer Science emphasis in the spring of
-								2024. I am planning to graduate with a Masters
-								in Computer Science in the spring of 2025
-								through the University of Arizona's accelerated
-								masters program. I am mainly interested in
-								recently developed technologies including A.I.
-								and quantum computing.
+								the University of Arizona. I am a dual major in
+								both Computer Science and Math. I am very
+								passionate about all things programming, and
+								especially AI. I hope to pursue a Master's in
+								Computer Science and compose a thesis about cost
+								functions that reduce noise when training AI.
+							</p>
+							<br />
+							<p>
+								I also enjoy giving back to the community. I
+								like to participate in road cleanups, volunteer
+								a food banks, and build houses for Habitat for
+								Humanity. I am especially passionate about
+								combatting homelessness. I frequently make care
+								packages, and always carry change in my wallet.
 							</p>
 							<br />
 							<p>
 								I enjoy spending time outside too. Some of my
 								main hobbies include running, rock climbing, and
-								camping. I also enjoy giving back to the
-								community. I like to participate in road
-								cleanups, and build houses for Habitat for
-								Humanity.
+								camping. I am also really into puzzles. My
+								favorite puzzles being sudoku and chess puzzles.
+								I especially like the sudokus presented on Crack
+								the Crypted. If you have any puzzle
+								recommendations I would love to hear them.
 							</p>
 						</div>
 						<div>
